# bevy-rogue

./: .aiexclude  .claudeignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: spec-check.sh  spec-commit-check.sh  tdd-check.sh
assets/items/: accessories.ron  armors.ron  consumables.ron  quest_items.ron  start_loadout.ron  weapons.ron
assets/monsters/: monsters.ron
assets/quests/: alchemist_quest.ron  buried_dungeon_quest.ron  demonsword_quest.ron  dragon_hunt_quest.ron  gem_quest.ron  herb_quest.ron  infiltration_quest.ron  jon_snow_quest.ron  loot_farming_quest.ron  parry_quest.ron  prologue_fog.ron  skill_trial_quest.ron  (+5 more)
docs/: architecture.md  commands.md  development-process.md  keybindings.md  map.md  roguelike-feature-checklist.md  testing.md
scripts/: coverage.sh  package.sh  publish-to-site.sh  uncovered.sh  wasm-build.sh  wasm-verify-site.mjs  wasm-verify.mjs  wasm-verify.sh
specs/: additional-systems.md  block-input-when-defeated.md  blood-particle-tweak.md  code-comment-language.md  combat-feedback.md  combat.md  data-externalization.md  demonsword-quest.md  destructible-terrain.md  dev.md  dla-performance.md  dungeon-monster-spawn-regression.md  elemental-reactions.md  equipment.md  fullscreen-map.md  game-over-new-run.md  glyph_style.md  guard-vision-overlay.md  help-overlay.md  item-drop.md  item-random-stats.md  items.md  map-generation-v2.md  map.md  minimap-cleanup-and-fullscreen.md  minimap-marker-single-pixel.md  minimap-marker-updates.md  minimap-markers.md  minimap-overlay.md  minimap.md  monster-fov.md  monster-registry.md  mouse-pathfinding.md  no-save-when-defeated.md  parry-quest.md  physics-particles.md  player-status-bars.md  player-xp-progression.md  player.md  pluggable-map-generator.md  (+35 more)
src/: lib.rs  main.rs
(+73 files in other folders)
