[package]
name = "bevy-rogue"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
noise = "0.8"
# bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy = { version = "0.13" }
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# 개발 빌드(cargo run) 시 의존성(bevy 등)에만 최적화를 활성화합니다.
# 이는 초기 빌드는 조금 더 오래 걸리게 하지만, 이후의 증분 빌드 속도를 크게 향상시킵니다.
# 여러분의 코드(/src)는 여전히 디버그 모드로 빠르게 컴파일됩니다.
# [profile.dev.package."*"]
# opt-level = 3
