[package]
name = "bevy-rogue"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_rogue"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bevy-rogue"
path = "src/main.rs"

[dependencies]
rand = "0.8"
noise = "0.8"
bevy = { version = "0.13" }
bevy_rapier2d = "0.26"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# 의존성 그래프의 getrandom 0.2 (rand 0.8 등) 가 wasm 에서 js 백엔드를 쓰도록.
getrandom = { version = "0.2", features = ["js"] }
# bevy_reflect → uuid v1 → getrandom 0.3 이 wasm_js 백엔드 사용.
# .cargo/config.toml 의 RUSTFLAGS 와 함께 두 가지(cfg + feature) 모두 필요.
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }

[features]
# 개발 반복 가속(opt-in): bevy 를 동적 링크(.so)로 빌드 → 증분 빌드·링크 추가 단축.
#   사용:  cargo run --features fast-dev
#   주의:  배포(릴리즈)에는 절대 쓰지 말 것. 런타임에 libbevy_dylib.so 가 필요해진다.
#          기본 빌드/테스트/커버리지/package.sh 는 이 피처 없이 정적 링크(영향 없음).
fast-dev = ["bevy/dynamic_linking"]

# 개발 빌드(cargo run) 시 의존성(bevy 등)에만 최적화를 활성화합니다.
# 이는 초기 빌드는 조금 더 오래 걸리게 하지만, 이후의 증분 빌드 속도를 크게 향상시킵니다.
# 여러분의 코드(/src)는 여전히 디버그 모드로 빠르게 컴파일됩니다.
# [profile.dev.package."*"]
# opt-level = 3
